# AnimeAgent

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  LICENSE  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
anime_agent/: config.py  main.py  web.py  web_schemas.py
anime_agent/memory/: database.py  init_db.py  models.py  store.py
anime_agent/services/: auto_subscribe_llm_filter.py  completion_checker.py  content_filter.py  discovery.py  episode_planner.py  healthcheck.py  metadata_resolver.py  qb_sync_service.py  scheduler.py  series_metadata_resolver.py  status_query.py  torrent_health.py  torrent_selector.py
anime_agent/tools/: __init__.py  anilist_tool.py  animes_garden_tool.py  bangumi_tool.py  base.py  bash_tool.py  emby_tool.py  filesystem_tool.py  llm_tool.py  notify_tool.py  qb_tool.py  rss_tool.py  tmdb_tool.py
anime_agent/utils/: logger.py
docs/: ARCHITECTURE_AND_PLAN.md  OLD_ANIME_DOWNLOAD_DESIGN.md  deployment.md
docs/adr/: 001-episode-graph-state-machine.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx
tests/: conftest.py  test_config_validation.py
tests/fakes/: __init__.py  fake_emby_tool.py  fake_filesystem_tool.py  fake_qb_tool.py
tests/test_integration/: test_episode_graph.py  test_episode_runner.py
tests/test_memory/: test_chat_store.py  test_database.py  test_init_db.py  test_models.py  test_store.py
tests/test_real_data/: __init__.py  conftest.py  test_anilist_smoke.py  test_bangumi_smoke.py  test_episode_pipeline.py  test_healthcheck.py  test_rss_smoke.py  test_tmdb_smoke.py
tests/test_services/: test_auto_subscribe.py  test_completion_checker.py  test_content_filter.py  test_discovery.py  test_discovery_extended.py  test_episode_planner.py  test_healthcheck.py  test_metadata_resolver.py  test_metadata_resolver_old_anime.py  test_qb_sync_service.py  test_scheduler.py  test_series_metadata_resolver.py  (+4 more)
(+135 files in other folders)
