[project]
name = "anime-agent"
version = "0.1.0"
description = "基于 LangGraph 的多 Agent 动漫追番自动化系统"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"

[project.scripts]
anime-agent = "anime_agent.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "respx>=0.21.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0",
]

[tool.poetry]
name = "anime-agent"
version = "0.1.0"
description = "基于 LangGraph 的多 Agent 动漫追番自动化系统"
authors = ["雨墨-星辰 <1764578602@qq.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "anime_agent"}]

[tool.poetry.dependencies]
python = "^3.11"
langgraph = "^0.2.0"
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
pydantic = "^2.0"
pydantic-settings = "^2.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
aiosqlite = "^0.20.0"
apscheduler = "^3.10.0"
httpx = "^0.27.0"
feedparser = "^6.0.0"
apprise = "^1.8.0"
qbittorrent-api = "^2024.0.0"
loguru = "^0.7.0"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
jinja2 = "^3.1.0"
python-multipart = "^0.0.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0"
respx = "^0.21.0"
ruff = "^0.7.0"
mypy = "^1.13.0"
pre-commit = "^4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-m 'not real_data' --cov=anime_agent --cov-report=term-missing --cov-report=xml"
markers = [
    "real_data: tests that call real external APIs",
]
